Fix Render deployment - multi-stage Docker, dynamic PORT, open CORS